--- a/public/index.html
+++ b/public/index.html
@@ -16,22 +16,23 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    
     <title>JS Code</title>
   </head>
   <body>
-    <div id="content">
+    <!-- Below is For Read More -->
+    <!-- <div id="content">
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ea ad molestiae animi deleniti ipsam cum placeat magni. Id, aperiam possimus dolorem repellendus molestiae est natus! Sequi quasi non dolorum!
     </div>
-    <a id="show-more">Expand</a>
+    <a id="show-more">Expand</a> -->
+
+    <!-- Below is For Changing Colors of circle -->
+     <div id="main">Welcome to Circle Click</div>
+     <div>Change the color circle by clicking on round ball</div>
+     <div id="wrapper">
+       <div id="circle"></div>
+     </div>
+     <div id="note"></div>
     <script src="scripts.js"></script>
   </body>
 </html>
