Add code for multiple kinds of events

--- a/public/index.html
+++ b/public/index.html
@@ -27,12 +27,34 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Est ea ad molestiae ani
     <a id="show-more">Expand</a> -->
 
     <!-- Below is For Changing Colors of circle -->
-     <div id="main">Welcome to Circle Click</div>
+     <!-- <div id="main">Welcome to Circle Click</div>
      <div>Change the color circle by clicking on round ball</div>
      <div id="wrapper">
        <div id="circle"></div>
      </div>
-     <div id="note"></div>
+     <div id="note"></div> -->
+
+      <!-- Below is For Copy text event,submit -->
+     <!-- <form action="" class="cool-form">
+       <label for="name" >
+<span>
+  Enter Your Name
+</span>
+<input type="text" name="name">
+       </label>
+       <label for="">
+         <input type="submit" value="Sign Up">
+         </label>
+         <p id="output"></p>
+     </form> -->
+
+     <!-- Below prints chains of Hi text when mouse is over a particular div and also prints small dots on the div -->
+     <!-- <div id="psuedo-image">
+       
+     </div>
+     <div id="my-text">
+
+     </div> -->
     <script src="scripts.js"></script>
   </body>
 </html>
